--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "themee",
 	"displayName": "Themee",
 	"description": "Light theme base on Intellij light theme. Dark theme base on gruvbox",
-	"version": "1.2.0",
+	"version": "1.5.0",
 	"publisher": "Koha13",
 	"license": "MIT",
 	"repository": {
@@ -26,6 +26,11 @@
 				"label": "koha13: Gruv dark theme",
 				"uiTheme": "vs-dark",
 				"path": "./themes/Gruv dark theme.json"
+			},
+			{
+				"label": "koha13: Minimal Gruvbox",
+				"uiTheme": "vs-dark",
+				"path": "./themes/Mininal Gruvbox.json"
 			}
 		]
 	},
